[tool.poetry]
name = "lto-bridge"
version = "0.1.0"
description = "three-way lto bridge monitoring"
authors = ["banteg <banteeg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
