[tool.poetry]
name = "lto-bridge"
version = "0.1.0"
description = "three-way lto bridge monitoring"
authors = ["banteg <banteeg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
termcolor = "^1.1"
pony = "^0.7.10"
psycopg2 = "^2.8"
requests = "^2.22"
eth_utils = "^1.6"
web3 = "^4.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
