[tool.poetry]
name = "lto-bridge"
version = "0.2.2"
description = "three-way lto bridge monitoring"
authors = ["banteg <banteeg@gmail.com>"]
readme = "readme.md"
license = "MIT"
repository = "https://github.com/banteg/lto-bridge"

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
termcolor = "^1.1"
pony = "^0.7.10"
psycopg2 = "^2.8"
requests = "^2.22"
web3 = "=5.0.0b2"
tgb = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
lto-bridge = "lto_bridge.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
